2004-08-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/match.c (match_tar, tar_to_regex): New fonction similar
	  to the exclude option of tar.
	* common-src/amanda.h (match_tar, tar_to_regex): Prototype.

2004-08-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/infofile.h (history_t): new struct.
	* server-src/infofile.h (info_t): Add a history_t.
	* server-src/infofile.c (read_txinfofile): Parse history data.
	* server-src/infofile.c (write_txinfofile): Print history data.
	* server-src/amadmin.c (export_one): export history data.
	* server-src/amadmin.c (import_one): import history data.
	* server-src/driverio.c (update_info_dumper): update history data.

2004-05-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/planner.c: Log L_DISK for autoflush disk.

2004-05-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (handle_result): Add dp to pestq at the
	  correct place.

2004-04-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amanda.h: #include "amanda-int.h" only if !CONFIGURE_TEST.

2004-04-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/acinclude.m4i (AX_CREATE_STDINT_H) : New macro.
	* configure.in: Use AX_CREATE_STDINT_H(common-src/amanda-int.h).
	* common-src/amanda.h: include "common-src/amanda-int.h".
	* changer-src/scsi-cam.c: Change u_int32_t for uint32_t.

2004-04-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Fix for automake 1.8.4.
	* config/acinclude.m4i: Fix for automake 1.8.4.

2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Result of autoupdate.

2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/config.guess: Update from automake 1.8.
	* config/config.sub: Update from automake 1.8.
	* config/depcomp: Update from automake 1.8.
	* config/install-sh: Update from automake 1.8.